# The-Hofstadter-G-Sequence

./: CMakeLists.txt  main.cpp
src/: lab3.cpp  lab3.hpp
tests/: lab3_test.cpp
